--- a/resources/css/app/app.css
+++ b/resources/css/app/app.css
@@ -1,11 +1,7 @@
-.full-screen-background-image {
-    z-index: -999;
-    min-height: 100%;
-    min-width: 1024px;
-    width: 100%;
-    height: auto;
-    position: relative;
-    top: 0;
-    left: 0;
-    background-image: url("../../../resources/images/bg.gif");
+.x-body {
+    background: url("../../../images/bg.gif") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
