--- a/resources/sass/bootstrap/bootstrap.scss
+++ b/resources/sass/bootstrap/bootstrap.scss
@@ -14,6 +14,7 @@ $grayDarker:            #222;
 $grayDark:              #333;
 $gray:                  #555;
 $grayLight:             #999;
+$grayMedium:            #D8D8D8;
 $grayLighter:           #eee;
 $white:                 #fff;
 
