--- a/resources/theme/stylesheets/bootstrap/default/widgets/_button.scss
+++ b/resources/theme/stylesheets/bootstrap/default/widgets/_button.scss
@@ -690,7 +690,7 @@
         font-size: $font-size;
         font-weight: $font-weight;
         font-family: $font-family;
-        color: $color;
+        color: $white;
         text-shadow: $shadow;
         background-repeat: no-repeat;
         padding: 0 $text-padding;
