[ODLG] Se corrigen incidecia del tabpanel y al pedir datosTaxista se realiza la consulta por idServicio.

--- a/resources/sass/bootstrap/bootstrap.scss
+++ b/resources/sass/bootstrap/bootstrap.scss
@@ -68,7 +68,7 @@ $tableBorder:                       #ddd; // table and cell border
 // Buttons
 // -------------------------
 $btnBackground:                     $white;
-$btnBackgroundHighlight:            darken($white, 10%);
+$btnBackgroundHighlight:            darken($black, 10%);
 $btnBorder:                         #bbb;
 
 $btnPrimaryBackground:              $linkColor;
