--- a/resources/css/app/app.css
+++ b/resources/css/app/app.css
@@ -10,3 +10,13 @@
     background-color: red;
     border-color: red;
 }
+
+.x-btn-warning-large-icon-text-left .x-btn-icon {
+    width: 70px;
+}
+
+.redUnder {
+    background-color: red;
+    color: red;
+}
+
